[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Images/bouclier.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Animated/bouclier.gd" type="Script" id=2]

[node name="bouclier" type="Node2D"]
script = ExtResource( 2 )

[node name="TextureRect" type="TextureButton" parent="."]
margin_left = 305.815
margin_top = 223.698
margin_right = 365.815
margin_bottom = 283.698
rect_rotation = 135.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
texture_disabled = ExtResource( 1 )
texture_focused = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="TextureRect" to="." method="_on_TextureRect_button_down"]
[connection signal="button_up" from="TextureRect" to="." method="_on_TextureRect_button_up"]
